--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <header>
         <h1>calc</h1>
         <div id="theme-selector">
+          <span>theme</span>
           <div class="switcher">
             <input type="radio" id="first-thm" class="theme-selector" name="theme-switcher" data-theme="1" checked>
             <input type="radio" id="second-thm" class="theme-selector" name="theme-switcher" data-theme="2">
