put labels into inputs

--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
         <div id="theme-selector">
           <span>theme</span>
           <div class="switcher">
+            <label for="first-thm"></label>
             <input type="radio" id="first-thm" class="theme-selector" name="theme-switcher" data-theme="1" checked>
+            <label for="second-thm"></label>
             <input type="radio" id="second-thm" class="theme-selector" name="theme-switcher" data-theme="2">
+            <label for="third-thm"></label>
             <input type="radio" id="third-thm" class="theme-selector" name="theme-switcher" data-theme="3">
             <div class="ball"></div>
           </div>
